fix(app): implement various fixes on search, history, and electron
* feat(search results): implement placeholder for broken images and modified bad search message

* refactor(components, order): formalize margins and remove force profile query when requesting order

Force profile querying is removed because it takes too long for orders to load

fix #47

* fix(order history): fix evil character parsing

* fix(external links): open link on external browser for electron app

Links should open on external browser to prevent electron client from opening a webpage internally
resulting in broken history tracking

fix #58

* refactor(config styles): remove '.text-black' in favor of '.color-secondary'

--- a/src/components/Card/PayoutCard.css
+++ b/src/components/Card/PayoutCard.css
@@ -2,7 +2,6 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2rem;
 }
 
 #title-social-media {
